2007-03-23  Lluis Sanchez Gual <lluis@novell.com> 

	Added build files.
